# dispel4py_GrPPI_workflows

./: README.md
dispel4py_workflows/: output_grppi.txt  submit.sh  submit_cross.sh  submit_grppi.sh  submit_grppi_2.sh  submit_grppi_pbs.sh  submit_job.pbs  submit_prep.sh
dispel4py_workflows/results/: graph.gnp
dispel4py_workflows/tc_cross_correlation/: env.sh  filed_prep.py  prueba.py  realtime_prep.py  realtime_xcorr.py  realtime_xcorr_input.jsn  realtime_xcorr_input.jsn_reducido  realtime_xcorr_mod.py  xcorr.py
grppi_workflows/: CMakeLists.txt
grppi_workflows/use_cases/: CMakeLists.txt
grppi_workflows/use_cases/mathgl_test/: CMakeLists.txt  Xcorr_0_1.out.npy  main.cpp  npy.hpp
grppi_workflows/use_cases/tc_cross_correlation/: CMakeLists.txt  README.md  eigen_shift.hpp  fftw_itf.hpp  fftw_itf_good.hpp  main.cpp  test.cpp
